# demo-hyformer

./: .gitignore  Makefile  README.md  pyproject.toml  tox.ini
src/demo_hyformer/: basic.py  dataset.py  eval.py  get_stat.py  over_fit.py  train.py
src/demo_hyformer/configs/: train.yaml
src/demo_hyformer/configs/callbacks/: default.yaml
src/demo_hyformer/configs/data/: demo.yaml  mnist.yaml
src/demo_hyformer/configs/debug/: default.yaml  overfit.yaml
src/demo_hyformer/configs/experiment/: example.yaml  wandb_example.yaml
src/demo_hyformer/configs/logger/: wandb.yaml
src/demo_hyformer/configs/model/: hyformer.yaml
src/demo_hyformer/configs/trainer/: default.yaml
src/demo_hyformer/models/: hyformer.py  kv_encoder.py
src/demo_hyformer/utils/: __init__.py  instantiators.py  logging_utils.py  rich_utils.py  utils.py
tmp/: dataset.py  get_stat.py
